@@ -2,6 +2,7 @@ VP 10.6.0 Changelog
 ------------------------
 
 - fix some regressions (introduced with 10.5) with backdrop lights (most prominent: bulb lights had wrong falloff, the 'classic' lights wrong image mapping)
+  as a bonus, this should also finally fix all issues seen with backdrop lights on intel/builtin graphics in the past
 - disable transmit for backdrop bulb lights
 
 - add support to read out the current hit threshold if the ball hits a Primitive or a HitTarget
@@ -23,7 +24,7 @@ VP 10.6.0 Changelog
 
 - add strength parameter for the (optional) legacy/VP9-like keyboard nudging code, can be set in the 'Keys, Nudge and DOF' preferences dialog
 
-- add support for showing the image of a primitve mesh in the editor. However this feature is far from perfect because Windows GDI, that draws the elements in the editor, can't handle meshes well.
+- add support for showing the image of a primitve mesh in the editor. However this feature is far from perfect because Windows GDI (which draws the elements in the editor) can't handle meshes well
 
 - re-use existing sound settings if re-importing a sound file
 
